--- a/unpoller/Dockerfile
+++ b/unpoller/Dockerfile
@@ -1,14 +1,9 @@
-ARG BUILD_FROM=hassioaddons/base:latest
-FROM ${BUILD_FROM}
+# https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
-RUN apk add --no-cache curl
+# Execute during the build of the image
+RUN \
+    curl -s https://golift.io/repo.sh | bash -s - unpoller
 
-# Install Unpoller
-RUN curl -L "https://github.com/unpoller/unpoller/releases/download/v2.11.2/unpoller_2.11.2_linux_${BUILD_ARCH}.tar.gz" | tar xz -C /usr/local/bin
 
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
-
-EXPOSE 9130
-
-CMD [ "/run.sh" ]
