--- a/unpoller/build.yaml
+++ b/unpoller/build.yaml
@@ -1,11 +1,11 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
 build_from:
-  aarch64: "ghcr.io/home-assistant/aarch64-base:3.15"
-  amd64: "ghcr.io/home-assistant/amd64-base:3.15"
-  armhf: "ghcr.io/home-assistant/armhf-base:3.15"
-  armv7: "ghcr.io/home-assistant/armv7-base:3.15"
-  i386: "ghcr.io/home-assistant/i386-base:3.15"
-labels:
+  aarch64: "ghcr.io/home-assistant/aarch64-base-debian:bookworm"
+  amd64: "ghcr.io/home-assistant/amd64-base-debain:bookworm"
+  armhf: "ghcr.io/home-assistant/armhf-base-debain:bookworm"
+  armv7: "ghcr.io/home-assistant/armv7-base-debain:bookworm"
+  i386: "ghcr.io/home-assistant/i386-base=base:bookworm"
+labels:labels:
   org.opencontainers.image.title: "Unpolller for Home Assistnat"
   org.opencontainers.image.description: "Unpoller"
   org.opencontainers.image.source: "https://github.com/cookytime/addon-unpoller"
