--- a/unpoller/config.json
+++ b/unpoller/config.json
@@ -1,29 +1,20 @@
 {
-    "name": "Unpoller for InfluxDB 2.0",
-    "version": "1.0",
-    "slug": "unpoller",
-    "description": "Unpoller (Unifi-Poller) for InfluxDB 2.0",
-    "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
-    "startup": "services",
-    "boot": "auto",
-    "hassio_api": true,
-    "hassio_role": "default",
-    "homeassistant_api": false,
-    "host_network": true,
-    "map": ["config", "ssl"],
-    "options": {
-      "log_level": "info",
-      "influxdb_url": "http://influxdb:8086",
-      "influxdb_token": "",
-      "influxdb_org": "",
-      "influxdb_bucket": ""
-    },
-    "schema": {
-      "log_level": "str",
-      "influxdb_url": "str",
-      "influxdb_token": "str",
-      "influxdb_org": "str",
-      "influxdb_bucket": "str"
-    }
-  }
-  
+  "name": "Unpoller Add-on",
+  "version": "1.0",
+  "slug": "unpoller_addon",
+  "description": "An add-on to install and run Unpoller.",
+  "arch": ["aarch64", "amd64", "armv7", "armhf", "i386"],
+  "startup": "services",
+  "boot": "auto",
+  "init": false,
+  "ports": {
+    "9130/tcp": 9130
+  },
+  "ports_description": {
+    "9130/tcp": "Unpoller web interface"
+  },
+  "map": ["config:rw", "ssl", "share:rw", "addons:rw", "backup:rw"],
+  "options": {},
+  "schema": {},
+  "image": "local/addon-unpoller"
+}
