--- a/unpoller/Dockerfile
+++ b/unpoller/Dockerfile
@@ -3,6 +3,9 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Execute during the build of the image
+RUN apt update
+RUN apt upgrade
+RUN apt install gpg
 RUN \
     curl -s https://golift.io/repo.sh | bash -s - unpoller
 
