--- a/unpoller/Dockerfile
+++ b/unpoller/Dockerfile
@@ -4,7 +4,7 @@ FROM $BUILD_FROM
 
 # Execute during the build of the image
 RUN apt update
-RUN apt install gpg
+RUN apt install gpg curl -y
 RUN \
     curl -s https://golift.io/repo.sh | bash -s - unpoller
 
