--- a/unpoller/build.yaml
+++ b/unpoller/build.yaml
@@ -4,6 +4,7 @@ build_from:
   amd64: "ghcr.io/home-assistant/amd64-base-debian:bookworm"
   armhf: "ghcr.io/home-assistant/armhf-base-debian:bookworm"
   armv7: "ghcr.io/home-assistant/armv7-base-debian:bookworm"
+  i386: "ghcr.io/home-assistant/i386-base-debian:bookworm"
 labels:
   org.opencontainers.image.title: "Unpolller for Home Assistnat"
   org.opencontainers.image.description: "Unpoller"
