Fixed image name

--- a/unpoller/config.yaml
+++ b/unpoller/config.yaml
@@ -18,4 +18,4 @@ options:
   message: "Hello world..."
 schema:
   message: "str?"
-image: "ghcr.io/cookytime/{arch}-addon-example"
+image: "ghcr.io/cookytime/{arch}-addon-unpoller"
