remove Example and fix config folder.

--- a/unpoller/config.yaml
+++ b/unpoller/config.yaml
@@ -1,6 +1,6 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
 name: Unpoller add-on
-version: "1.0"
+version: "1.2"
 slug: unpoller
 description: Unpoller add-on
 url: "https://github.com/cookytime/addons-unpoller/tree/main/unpoller"
@@ -13,9 +13,9 @@ arch:
 init: false
 map:
   - share:rw
-  - addon_config:rw
+  - homeassistant_config:rw
 options:
-  message: "Hello world..."
+
 schema:
   message: "str?"
 image: "ghcr.io/cookytime/{arch}-addon-unpoller"
